--- a/EventQtSlotConnect.ui
+++ b/EventQtSlotConnect.ui
@@ -437,12 +437,29 @@
      </property>
     </widget>
    </widget>
+   <widget class="QProgressBar" name="cmrep_progressBar">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>250</y>
+      <width>241</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>24</number>
+    </property>
+    <property name="textVisible">
+     <bool>false</bool>
+    </property>
+   </widget>
    <zorder>tabWidget</zorder>
    <zorder>groupBox</zorder>
    <zorder>qvtkWidget</zorder>
    <zorder>textEdit</zorder>
    <zorder>radioButtonVertex</zorder>
    <zorder>radioButtonBranch</zorder>
+   <zorder>cmrep_progressBar</zorder>
   </widget>
   <action name="actionOpenFile">
    <property name="enabled">
