--- a/EventQtSlotConnect.ui
+++ b/EventQtSlotConnect.ui
@@ -382,7 +382,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>20</y>
+        <y>10</y>
         <width>101</width>
         <height>16</height>
        </rect>
@@ -433,6 +433,19 @@
        </property>
        <property name="text">
         <string>Add Tag</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButtonDeleteTag">
+       <property name="geometry">
+        <rect>
+         <x>110</x>
+         <y>70</y>
+         <width>71</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Delete Tag</string>
        </property>
       </widget>
      </widget>
@@ -522,6 +535,19 @@
       </property>
       <property name="scaledContents">
        <bool>false</bool>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBoxHideMesh">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>30</y>
+        <width>101</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Hide Mesh</string>
       </property>
      </widget>
     </widget>
