--- a/EventQtSlotConnect.ui
+++ b/EventQtSlotConnect.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>808</width>
-    <height>576</height>
+    <width>868</width>
+    <height>604</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
       <x>20</x>
       <y>30</y>
       <width>551</width>
-      <height>491</height>
+      <height>531</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -41,8 +41,8 @@
      <rect>
       <x>590</x>
       <y>30</y>
-      <width>211</width>
-      <height>491</height>
+      <width>251</width>
+      <height>531</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -58,8 +58,8 @@
      <widget class="QPushButton" name="cmrepVskel">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>410</y>
+        <x>80</x>
+        <y>440</y>
         <width>101</width>
         <height>31</height>
        </rect>
@@ -71,7 +71,7 @@
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>30</x>
         <y>100</y>
         <width>54</width>
         <height>12</height>
@@ -84,7 +84,7 @@
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>30</x>
         <y>130</y>
         <width>54</width>
         <height>12</height>
@@ -97,7 +97,7 @@
      <widget class="QLabel" name="label_3">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>30</x>
         <y>160</y>
         <width>54</width>
         <height>12</height>
@@ -110,7 +110,7 @@
      <widget class="QLabel" name="label_4">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>30</x>
         <y>190</y>
         <width>54</width>
         <height>12</height>
@@ -123,7 +123,7 @@
      <widget class="QSpinBox" name="eParameter">
       <property name="geometry">
        <rect>
-        <x>40</x>
+        <x>60</x>
         <y>100</y>
         <width>42</width>
         <height>22</height>
@@ -133,7 +133,7 @@
      <widget class="QDoubleSpinBox" name="pParameter">
       <property name="geometry">
        <rect>
-        <x>40</x>
+        <x>60</x>
         <y>130</y>
         <width>62</width>
         <height>22</height>
@@ -143,7 +143,7 @@
      <widget class="QSpinBox" name="cParameter">
       <property name="geometry">
        <rect>
-        <x>40</x>
+        <x>60</x>
         <y>160</y>
         <width>42</width>
         <height>22</height>
@@ -153,7 +153,7 @@
      <widget class="QSpinBox" name="tParameter">
       <property name="geometry">
        <rect>
-        <x>40</x>
+        <x>60</x>
         <y>190</y>
         <width>42</width>
         <height>22</height>
@@ -163,9 +163,9 @@
      <widget class="Line" name="line">
       <property name="geometry">
        <rect>
-        <x>-10</x>
-        <y>210</y>
-        <width>221</width>
+        <x>0</x>
+        <y>220</y>
+        <width>251</width>
         <height>20</height>
        </rect>
       </property>
@@ -177,8 +177,8 @@
       <property name="geometry">
        <rect>
         <x>-10</x>
-        <y>50</y>
-        <width>221</width>
+        <y>60</y>
+        <width>251</width>
         <height>20</height>
        </rect>
       </property>
@@ -189,8 +189,8 @@
      <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>60</y>
+        <x>70</x>
+        <y>70</y>
         <width>101</width>
         <height>21</height>
        </rect>
@@ -202,8 +202,8 @@
      <widget class="QLabel" name="label_6">
       <property name="geometry">
        <rect>
-        <x>60</x>
-        <y>220</y>
+        <x>80</x>
+        <y>240</y>
         <width>91</width>
         <height>16</height>
        </rect>
@@ -215,8 +215,8 @@
      <widget class="QLabel" name="label_7">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>240</y>
+        <x>30</x>
+        <y>260</y>
         <width>54</width>
         <height>12</height>
        </rect>
@@ -228,8 +228,8 @@
      <widget class="QLineEdit" name="sParameter">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>240</y>
+        <x>70</x>
+        <y>260</y>
         <width>113</width>
         <height>20</height>
        </rect>
@@ -238,8 +238,8 @@
      <widget class="QLabel" name="label_8">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>270</y>
+        <x>30</x>
+        <y>290</y>
         <width>54</width>
         <height>12</height>
        </rect>
@@ -251,8 +251,8 @@
      <widget class="QLineEdit" name="RParameter">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>270</y>
+        <x>70</x>
+        <y>290</y>
         <width>113</width>
         <height>20</height>
        </rect>
@@ -261,8 +261,8 @@
      <widget class="QLabel" name="label_9">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>300</y>
+        <x>30</x>
+        <y>320</y>
         <width>54</width>
         <height>12</height>
        </rect>
@@ -274,8 +274,8 @@
      <widget class="QLineEdit" name="TParameter">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>300</y>
+        <x>70</x>
+        <y>320</y>
         <width>113</width>
         <height>20</height>
        </rect>
@@ -284,8 +284,8 @@
      <widget class="QLabel" name="label_10">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>330</y>
+        <x>30</x>
+        <y>350</y>
         <width>54</width>
         <height>12</height>
        </rect>
@@ -297,8 +297,8 @@
      <widget class="QLineEdit" name="IParameter">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>330</y>
+        <x>70</x>
+        <y>350</y>
         <width>113</width>
         <height>20</height>
        </rect>
@@ -307,8 +307,8 @@
      <widget class="QLabel" name="label_11">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>360</y>
+        <x>30</x>
+        <y>380</y>
         <width>54</width>
         <height>12</height>
        </rect>
@@ -320,8 +320,8 @@
      <widget class="QLineEdit" name="qParameter">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>360</y>
+        <x>70</x>
+        <y>380</y>
         <width>113</width>
         <height>20</height>
        </rect>
@@ -330,21 +330,21 @@
      <widget class="QLabel" name="label_12">
       <property name="geometry">
        <rect>
-        <x>50</x>
+        <x>70</x>
         <y>0</y>
         <width>101</width>
         <height>21</height>
        </rect>
       </property>
       <property name="text">
-       <string>General Options</string>
+       <string>General Option</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_13">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>30</y>
+        <x>30</x>
+        <y>40</y>
         <width>54</width>
         <height>12</height>
        </rect>
@@ -356,8 +356,8 @@
      <widget class="QLineEdit" name="pathParameter">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>30</y>
+        <x>70</x>
+        <y>40</y>
         <width>113</width>
         <height>20</height>
        </rect>
@@ -368,13 +368,13 @@
      <attribute name="title">
       <string>Pick</string>
      </attribute>
-     <widget class="QGroupBox" name="groupBox">
+     <widget class="QGroupBox" name="TaggroupBox">
       <property name="geometry">
        <rect>
         <x>10</x>
         <y>80</y>
-        <width>181</width>
-        <height>151</height>
+        <width>231</width>
+        <height>131</height>
        </rect>
       </property>
       <property name="title">
@@ -383,9 +383,9 @@
       <widget class="QComboBox" name="comboBoxTagPoint">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>30</y>
-         <width>151</width>
+         <x>20</x>
+         <y>20</y>
+         <width>181</width>
          <height>22</height>
         </rect>
        </property>
@@ -402,8 +402,8 @@
       <widget class="QPushButton" name="pushButtonAddTag">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>70</y>
+         <x>20</x>
+         <y>60</y>
          <width>75</width>
          <height>23</height>
         </rect>
@@ -415,8 +415,8 @@
       <widget class="QPushButton" name="pushButtonDeleteTag">
        <property name="geometry">
         <rect>
-         <x>90</x>
-         <y>70</y>
+         <x>130</x>
+         <y>60</y>
          <width>71</width>
          <height>23</height>
         </rect>
@@ -428,8 +428,8 @@
       <widget class="QPushButton" name="pushButtonEditTag">
        <property name="geometry">
         <rect>
-         <x>50</x>
-         <y>110</y>
+         <x>80</x>
+         <y>100</y>
          <width>71</width>
          <height>23</height>
         </rect>
@@ -443,7 +443,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>240</y>
+        <y>220</y>
         <width>81</width>
         <height>16</height>
        </rect>
@@ -465,7 +465,7 @@
       <property name="geometry">
        <rect>
         <x>100</x>
-        <y>240</y>
+        <y>220</y>
         <width>31</width>
         <height>16</height>
        </rect>
@@ -487,7 +487,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>260</y>
+        <y>240</y>
         <width>101</width>
         <height>16</height>
        </rect>
@@ -509,7 +509,7 @@
       <property name="geometry">
        <rect>
         <x>120</x>
-        <y>260</y>
+        <y>240</y>
         <width>31</width>
         <height>16</height>
        </rect>
@@ -527,12 +527,12 @@
        <bool>false</bool>
       </property>
      </widget>
-     <widget class="QGroupBox" name="groupBox_2">
+     <widget class="QGroupBox" name="SkandMeshgroupBox">
       <property name="geometry">
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>181</width>
+        <width>231</width>
         <height>61</height>
        </rect>
       </property>
@@ -566,12 +566,329 @@
        </property>
       </widget>
      </widget>
-     <zorder>groupBox_2</zorder>
-     <zorder>groupBox</zorder>
+     <widget class="QGroupBox" name="groupBox">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>270</y>
+        <width>231</width>
+        <height>201</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>Decimation</string>
+      </property>
+      <widget class="QSlider" name="TargetReductSlider">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>60</y>
+         <width>151</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="maximum">
+        <number>100</number>
+       </property>
+       <property name="singleStep">
+        <number>1</number>
+       </property>
+       <property name="pageStep">
+        <number>10</number>
+       </property>
+       <property name="value">
+        <number>0</number>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="TargetReductLineEdit">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>60</y>
+         <width>41</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_18">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>30</y>
+         <width>131</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Target Reduction</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_19">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>100</y>
+         <width>91</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Feature Angle</string>
+       </property>
+      </widget>
+      <widget class="QSlider" name="FeatureAngleSlider">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>120</y>
+         <width>151</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="maximum">
+        <number>360</number>
+       </property>
+       <property name="singleStep">
+        <number>1</number>
+       </property>
+       <property name="pageStep">
+        <number>10</number>
+       </property>
+       <property name="value">
+        <number>0</number>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="FeatureAngleLineEdit">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>120</y>
+         <width>41</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="ApplyDecimateButton">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>160</y>
+         <width>121</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Apply Decimation</string>
+       </property>
+      </widget>
+     </widget>
+     <zorder>SkandMeshgroupBox</zorder>
+     <zorder>TaggroupBox</zorder>
      <zorder>labelPoint</zorder>
      <zorder>PointNumber</zorder>
      <zorder>labelTriangle</zorder>
      <zorder>TriangleNumber</zorder>
+     <zorder>groupBox</zorder>
+    </widget>
+    <widget class="QWidget" name="tab_3">
+     <attribute name="title">
+      <string>Save Option</string>
+     </attribute>
+     <widget class="QGroupBox" name="SaveOptiongroupBox">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>10</y>
+        <width>241</width>
+        <height>241</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>Save Option</string>
+      </property>
+      <widget class="QLabel" name="label_14">
+       <property name="geometry">
+        <rect>
+         <x>60</x>
+         <y>40</y>
+         <width>54</width>
+         <height>12</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Grid Type</string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="GridTypeComboBox">
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>40</y>
+         <width>111</width>
+         <height>22</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_15">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>70</y>
+         <width>111</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Subdivision Level</string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="SubLevelComboBox">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>70</y>
+         <width>41</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>1</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>2</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>3</string>
+        </property>
+       </item>
+      </widget>
+      <widget class="QLabel" name="label_16">
+       <property name="geometry">
+        <rect>
+         <x>43</x>
+         <y>110</y>
+         <width>81</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Solver Type</string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="SolverTypeComboBox">
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>110</y>
+         <width>111</width>
+         <height>22</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_17">
+       <property name="geometry">
+        <rect>
+         <x>40</x>
+         <y>140</y>
+         <width>81</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Constant Rho</string>
+       </property>
+      </widget>
+      <widget class="Line" name="line_3">
+       <property name="geometry">
+        <rect>
+         <x>7</x>
+         <y>90</y>
+         <width>221</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="RhoLineEdit">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>140</y>
+         <width>81</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>-0.001</string>
+       </property>
+      </widget>
+      <widget class="Line" name="line_4">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>170</y>
+         <width>211</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="ConsRadiusCheckBox">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>190</y>
+         <width>111</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Constant Radius</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="RadiusLineEdit">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>130</x>
+         <y>190</y>
+         <width>71</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>0.5</string>
+       </property>
+      </widget>
+     </widget>
     </widget>
    </widget>
    <widget class="QProgressBar" name="cmrep_progressBar">
